k8s/systems/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "grafana.bug-farm.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-grafana  # <--- Поправили имя сервиса
          port: 80                  # <--- Порт совпадает (80/TCP)
